base-extensions/cloudflare-tunnel/tunnel-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cloudflare-tunnel
  name: tunnel-2
  namespace: cloudflare-tunnel
spec:
  selector:
    matchLabels:
      pod: tunnel-2
  template:
    metadata:
      labels:
        pod: tunnel-2
        app: cloudflare-tunnel
    spec:
      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:latest
          command:
            - cloudflared
            - tunnel
            # In a k8s environment, the metrics server needs to listen outside the pod it runs on.
            # The address 0.0.0.0:2000 allows any pod in the namespace.
            - --metrics
            - 0.0.0.0:2000
            - --no-autoupdate
            - run
          resources:
            requests:
              cpu: "100m"
              memory: "200Mi"
            limits:
              cpu: "500m"
              memory: "200Mi"
          livenessProbe:
            httpGet:
              # Cloudflared has a /ready endpoint which returns 200 if and only if
              # it has an active connection to the edge.
              path: /ready
              port: 2000
            failureThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 10
          ports:
            - name: http-metrics
              containerPort: 2000
