base-extensions/cloudflare-tunnel/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cloudflare-tunnel
  name: tunnel-metrics
  namespace: cloudflare-tunnel
spec:
  ports:
    - name: http-metrics
      port: 2000
      targetPort: http-metrics
      protocol: TCP
  selector:
    app: cloudflare-tunnel
